# Snakes

./: CMakeLists.txt  README.md
include/core/: bot.hpp  events.hpp  types.hpp
include/entities/: health.hpp  rabbit.hpp  snake.hpp
include/game/: game.hpp  game_model.hpp
include/view/: colors.hpp  view.hpp  view_ascii.hpp  view_graphics.hpp
src/: bot.cpp  main.cpp  view_ascii.cpp  view_graphics.cpp
